<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logs2">

    <ImageButton
        android:id="@+id/imageButton1"
        android:contentDescription="@string/backarrow_button1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintVertical_bias="0.023"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/backarrow_button1"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:contentDescription="@string/options_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintVertical_bias="0.023"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/options_button"/>

    <ImageButton
        android:id="@+id/imageButton3"
        android:contentDescription="@string/settings_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintVertical_bias="0.984"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/settings_button" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:contentDescription="@string/leaderboards_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintVertical_bias="0.984"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/leaderboards_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
